force-app/main/default/objects/AmministrazioneSottotipologiaUso__c/AmministrazioneSottotipologiaUso__c.object-meta.xml
<CustomObject>
    <label>Amministrazione Sottotipologia Uso</label>
    <nameField>
        <label>Amministrazione Sottotipologia Uso Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Amministrazione Sottotipologia Uso</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>