force-app/main/default/objects/AmministrazioneSottotipologiaUso__c/fields/Attivo__c.field-meta.xml
<CustomField>
    <fullName>Attivo__c</fullName>
    <formula>DataFineValidita__c &gt; TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attivo</label>
    <type>Checkbox</type>
</CustomField>