force-app/main/default/objects/AmministrazioneSottotipologiaUso__c/fields/CategoriaTariffa__c.field-meta.xml
<CustomField>
    <fullName>CategoriaTariffa__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Categoria Tariffa</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product2.Service__c</field>
            <operation>equals</operation>
            <value>Acqua</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Amministrazione Sottotipologia Uso</relationshipLabel>
    <relationshipName>AmministrazioneSottotipologiaUso</relationshipName>
    <type>Lookup</type>
</CustomField>