force-app/main/default/objects/AmministrazioneSottotipologiaUso__c/fields/CodiceCategoriaTariffa__c.field-meta.xml
<CustomField>
    <fullName>CodiceCategoriaTariffa__c</fullName>
    <formula>CategoriaTariffa__r.ProductCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Codice Categoria Tariffa</label>
    <type>Text</type>
</CustomField>