force-app/main/default/objects/AmministrazioneSottotipologiaUso__c/fields/DataFineValidita__c.field-meta.xml
<CustomField>
    <fullName>DataFineValidita__c</fullName>
    <label>Data Fine Validità</label>
    <type>Date</type>
</CustomField>