force-app/main/default/objects/AmministrazioneSottotipologiaUso__c/fields/IntendedUse__c.field-meta.xml
<CustomField>
    <fullName>IntendedUse__c</fullName>
    <label>Destinazione D&apos;uso</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_IntendedUse</valueSetName>
    </valueSet>
</CustomField>