force-app/main/default/objects/AmministrazioneSottotipologiaUso__c/fields/Societa__c.field-meta.xml
<CustomField>
    <fullName>Societa__c</fullName>
    <label>Società</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5010</fullName>
            </value>
            <value>
                <fullName>7010</fullName>
            </value>
            <value>
                <fullName>8060</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>