force-app/main/default/objects/AmministrazioneSottotipologiaUso__c/fields/SottotipologiaUso__c.field-meta.xml
<CustomField>
    <fullName>SottotipologiaUso__c</fullName>
    <label>Sottotipologia Uso</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Uso domestico residente</fullName>
            </value>
            <value>
                <fullName>Uso condominiale</fullName>
            </value>
            <value>
                <fullName>Uso domestico non residente</fullName>
            </value>
            <value>
                <fullName>Uso industriale</fullName>
            </value>
            <value>
                <fullName>Uso artigianale e commerciale</fullName>
            </value>
            <value>
                <fullName>Uso agricolo e zootecnico</fullName>
            </value>
            <value>
                <fullName>Uso pubblico non disalimentabile</fullName>
            </value>
            <value>
                <fullName>Uso pubblico disalimentabile</fullName>
            </value>
            <value>
                <fullName>Altri usi</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>