force-app/main/default/objects/AmministrazioneSottotipologiaUso__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CategoriaTariffa__c</columns>
    <columns>CodiceCategoriaTariffa__c</columns>
    <columns>DataInizioValidita__c</columns>
    <columns>DataFineValidita__c</columns>
    <columns>TipologiaUso__c</columns>
    <columns>SottotipologiaUso__c</columns>
    <columns>Societa__c</columns>
    <columns>Attivo__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>